--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,24 @@
     --font-heading: "Encode Sans", sans-serif;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 6px;
     background-color: beige;
 }
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
     background-color: #0d1025;
+}
+
+.horizontalAmenitiesFilter::-webkit-scrollbar {
+    height: 6px;
+    background-color: transparent;
+}
+.horizontalAmenitiesFilter::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 254, 255, 0.32);
+    border-radius: 100px;
+}
+
+.horizontalAmenitiesFilter::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255, 254, 255, 0.5);
+    border-radius: 100px;
 }
